--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "firebase": "^10.14.1",
     "leaflet": "^1.9.4",
@@ -22,6 +23,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
     "react-loading-skeleton": "^3.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
